--- a/css/styles.css
+++ b/css/styles.css
@@ -4,16 +4,66 @@ body{
     color: #434455;
 }
 
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+
+h1,h2,h2,p{
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+
 ul{
   list-style-type: none;
+  padding-left: 0;
+  margin-top: 0;
+  margin-bottom: 0;
 }
 
 a{
   text-decoration: none;
 }
+
+img{
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
 /* Header */
 
-.logo{
+.header-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.container {
+  width: 1158px;
+  padding: 0 15px;
+  margin: 0 auto;
+}
+
+header {
+  border-bottom: 1px solid #E7E9FC;
+}
+
+.header-nav {
+  display: flex;
+  align-items: center;
+  margin: 0;
+}
+
+.header-logo {
     color:#4D5AE5;
     font-family: Raleway, sans-serif;
     font-size: 18px;
@@ -22,11 +72,16 @@ a{
     line-height: 1.17;
     letter-spacing: 0.54px;
     text-transform: uppercase;
-
+    margin-right: 76px;
 }
 
 .logo-item{
   color: #2E2F42
+}
+
+.nav-list{
+  display: flex;
+  gap: 40px;
 }
 
 .nav-link{
@@ -36,6 +91,8 @@ a{
   font-weight: 500;
   line-height: 1.5;
   letter-spacing: 0.32px;
+  padding: 24px 0;
+  display: block;
 }
 .nav-link:hover,
 .nav-link:focus{
@@ -45,6 +102,12 @@ a{
 .address{
   font-style: normal;
 }
+
+.address-list{
+  display: flex;
+  gap: 40px;
+}
+
 .address-link{
  color: #434455;
  font-style: normal;
@@ -63,7 +126,9 @@ a{
 
 .section-hero{
  background-color: #2E2F42;
+padding: 188px 0;
 }
+
 .hero{
  color: #FFF;
  text-align: center;
@@ -72,6 +137,10 @@ a{
  font-weight: 700;
  line-height: 1.07;
  letter-spacing: 1.12px;
+  max-width: 496px;
+  margin-right: auto;
+  margin-left: auto;
+  margin-bottom: 48px;
 }
 .button{
  font-family: Roboto, sans-serif;
@@ -83,6 +152,16 @@ a{
  line-height: 1.5;
  letter-spacing: 0.64px;
  cursor: pointer;
+ display: flex;
+  padding: 16px 32px;
+  align-items: flex-start;
+  gap: 10px;
+  border-radius: 4px;
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+  min-width: 169px;
+  height: 56px;
+  margin-right: auto;
+  margin-left: auto;
 }
 .button:hover,
 .button:focus{
@@ -91,6 +170,20 @@ a{
 
 /* Section2 */
 
+.advantages{
+padding: 120px 0;
+}
+
+.advantages-list{
+  display: flex;
+  gap: 24px;
+}
+
+.advantages-item{
+  width: calc((100% - 72px)/4);
+}
+
+
 .section-advantages{
 color: #2E2F42;
   font-size: 20px;
@@ -98,7 +191,9 @@ color: #2E2F42;
   font-weight: 500;
   line-height: 1.2;
   letter-spacing: 0.4px;
+  margin-bottom: 8px;
 }
+
 .text-advantages{
 color: #434455;
   font-size: 16px;
@@ -112,7 +207,14 @@ color: #434455;
 
 .our-team-section{
  background-color: #F4F4FD;
+ padding: 120px 0;
 }
+
+.our-team-list{
+ display: flex;
+ gap: 24px;
+}
+
 .our-team{
  color:  #2E2F42;
  text-align: center;
@@ -122,10 +224,15 @@ color: #434455;
  line-height: 1.11;
  letter-spacing: 0.72px;
  text-transform: capitalize;
+ margin-bottom: 72px;
 }
+
 .list-team{
  background-color: #fff;
+ width: calc((100% - 72px)/4);
+border-radius: 0 4px;
 }
+
 .name{
  color: #2E2F42;
  text-align: center;
@@ -134,6 +241,7 @@ color: #434455;
  font-weight: 500;
  line-height: 1.2;
  letter-spacing: 0.4px;
+ margin-bottom: 8px;
 }
 .job{
 color: #434455;
@@ -147,6 +255,11 @@ color: #434455;
 
 /* Section4 */
 
+.portfolio-section{
+  background-color: #FFF;
+  padding: 120px 0;
+}
+
 .portfolio{
 color: #2E2F42;
   text-align: center;
@@ -156,7 +269,19 @@ color: #2E2F42;
   line-height: 1.11;
   letter-spacing: 0.72px;
   text-transform: capitalize;
+  margin-bottom: 72px;
 }
+
+.portfolio-list{
+  display: flex;
+  flex-wrap: wrap;
+  gap: 48px 24px;
+}
+
+.portfolio-item{
+  width: calc((100% - 48px)/3);
+}
+
 .portfolio-app{
 color:  #2E2F42;
   font-size: 20px;
@@ -164,6 +289,7 @@ color:  #2E2F42;
   font-weight: 500;
   line-height: 1.2;
   letter-spacing: 0.4px;
+  margin-bottom: 8px;
 }
 .portfolio-view{
 color: #434455;
@@ -178,10 +304,26 @@ color: #434455;
 
 .footer{
 background-color: #2E2F42;
+padding: 100px 0;
 }
+
+.footer-logo{
+  color: #4D5AE5;
+  font-family: Raleway, sans-serif;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 1.17;
+  letter-spacing: 0.54px;
+  text-transform: uppercase;
+  margin-bottom: 17.5px;
+  display: flex;
+}
+
 .logo-footer{
   color: #F4F4FD
 }
+
 .text-footer{
 color: #F4F4FD;
   font-size: 16px;
@@ -189,4 +331,5 @@ color: #F4F4FD;
   font-weight: 400;
   line-height: 1.5;
   letter-spacing: 0.32px;
+  max-width: 264px;
 }
