--- a/css/styles.css
+++ b/css/styles.css
@@ -53,7 +53,7 @@ img{
   margin: 0 auto;
 }
 
-header {
+.header {
   border-bottom: 1px solid #E7E9FC;
 }
 
@@ -152,7 +152,7 @@ padding: 188px 0;
  line-height: 1.5;
  letter-spacing: 0.64px;
  cursor: pointer;
- display: flex;
+ display: block;
   padding: 16px 32px;
   align-items: flex-start;
   gap: 10px;
@@ -162,6 +162,7 @@ padding: 188px 0;
   height: 56px;
   margin-right: auto;
   margin-left: auto;
+  border: none;
 }
 .button:hover,
 .button:focus{
@@ -227,10 +228,15 @@ color: #434455;
  margin-bottom: 72px;
 }
 
+.team-container{
+  text-align: center;
+  padding: 32px 0;
+}
+
 .list-team{
  background-color: #fff;
  width: calc((100% - 72px)/4);
-border-radius: 0 4px;
+ border-radius: 0px 0px 4px 4px;
 }
 
 .name{
@@ -278,6 +284,11 @@ color: #2E2F42;
   gap: 48px 24px;
 }
 
+.portfolio-container{
+padding: 32px 16px;
+border: 1px solid #E7E9FC;
+border-top: none;
+}
 .portfolio-item{
   width: calc((100% - 48px)/3);
 }
@@ -317,7 +328,7 @@ padding: 100px 0;
   letter-spacing: 0.54px;
   text-transform: uppercase;
   margin-bottom: 17.5px;
-  display: flex;
+  display: inline-block;
 }
 
 .logo-footer{
